tdf#153082 writerfilter,sw: import/export locale-dependent TOC ...

... \t style name separators.

OOXML says in 17.16.5.68 TOC:

  \t field-argument
  Uses paragraphs formatted with styles other than the built-in
  heading styles. text in this switch's field-argument specifies those
  styles as a set of comma-separated doublets, with each doublet
  being a comma-separated set of style name and table of content
  level.

The reality is documented in Word online help:
https://support.microsoft.com/en-us/office/field-codes-toc-table-of-contents-field-1f538bc4-60e6-4854-9f64-67754d78d05c?ui=en-US&rs=en-US&ad=US

  Note: Syntax shown here uses a comma (,) between the Style and Level
  parameters. A semicolon (;) is also valid, depending on which
  character is specified as the list separator in your operating
  system's regional and language settings. Because of language-specific
  dependencies, we recommend not using the \t switch in templates or
  documents that are intended for users across multiple language
  configurations.

It's easy enough to recognize both ',' and ';' as separators on import,
and unlikely that anybody would use these characters inside a style
name; for export, both can't be written and a decision must be made.

So do the same thing on export as Word does, assuming most document
exchange is between users in the same locale; currently only for "de"
locales but more can be added.

Interestingly WW8 used to write ';' before 2009 when CWS hb32bugs01
changed it to ','.

Change-Id: I2dcfdd009f448f6fae37cbd28929d0bbe504acf9
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/145744
Tested-by: Jenkins
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>